# PostgreSQL_HH

./: README.md  companies.json  config.py  database.ini  main.py  pyproject.toml  utils.py
