[tool.poetry]
name = "postgresql-hh"
version = "0.1.0"
description = ""
authors = ["Zubayr Bibulatov <Ru.Zubayr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
google-api-python-client = "^2.113.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
